--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -30,7 +30,6 @@
     </div>
 </div>
 
-
 <br><br><br><br>
 <hr style="height: 5px; width: 100%; background-color: #00e5ff; border: 0;" />
 
@@ -65,8 +64,8 @@
 
 <hr style="height: 1px; width: 25%; background-color: #00e5ff; border: 0;" />
 
-<div class="card-deck" style="margin-left: 100px; margin-right: 100px">
-    <div class="card" style="margin-right: 100px; text-align: center;">
+<div class="card-deck" style="margin-left: 175px;">
+    <div class="card" style="margin-right: 100px; text-align: center; min-width: 300px; max-width: 300px; margin-bottom: 25px;">
       <img class="card-img-top" src="assets/img/Serien/letzter_flug_s.jpg" alt="Card image cap">
       <div class="card-body">
         <p class="card-text">Das Team um Manfred besitzt einen Heißluftballon mit denen sie Rundflüge anbieten. Doch sie kommen in Verdacht der Polizei da immer mehr Gäste nicht mehr lebend heimkommen.</p>
@@ -76,7 +75,7 @@
         <small class="text-muted">Thriller - FSK16 - 5 Staffeln</small>
       </div>
     </div>
-    <div class="card" style="margin-right: 100px; text-align: center;">
+    <div class="card" style="margin-right: 100px; text-align: center; min-width: 300px; max-width: 300px; margin-bottom: 25px;">
       <img class="card-img-top" src="assets/img/Serien/unbekannte_dinge_s.jpg" alt="Card image cap">
       <div class="card-body">
         <p class="card-text">Die Gang Chillwatcher, eine Gruppe von Jugendlichen, trifft auf den mysteriösen Paul. Dieser stellt das Leben der Gang buchstäblich auf den Kopf. Und sie wissen nicht mehr ob sie Dinge vergessen oder noch nie gehört haben.
@@ -87,7 +86,7 @@
         <small class="text-muted">Horror - FSK16 - 4 Staffeln</small>
       </div>
     </div>
-    <div class="card" style="text-align: center;">
+    <div class="card" style="text-align: center; margin-right: 100px; min-width: 300px; max-width: 300px; margin-bottom: 25px;">
       <img class="card-img-top" src="assets/img/Serien/weihnachtsmann_ und_co._kg_s.jpg" alt="Card image cap">
       <div class="card-body">
         <p class="card-text">Der Weihnachtsmann beschenkt mithilfe seiner fleißigen Elfen die Kinder in ganz Ravensburg, dabei passieren ihm einige Missgeschicke.</p>
@@ -109,8 +108,8 @@
 
 <hr style="height: 1px; width: 25%; background-color: #00e5ff; border: 0;" />
 
-<div class="card-deck" style="margin-left: 100px; margin-right: 100px">
-    <div class="card" style="margin-right: 100px; text-align: center;">
+<div class="card-deck" style="margin-left: 175px;">
+    <div class="card" style="margin-right: 100px; margin-bottom: 25px; text-align: center; min-width: 300px; max-width: 300px;">
       <img class="card-img-top" src="assets/img/Filme/der_letzte_schritt_f.jpg" alt="Card image cap">
       <div class="card-body">
         <p class="card-text">Louis ist ein Außenseiter. Er versucht alles um Anschluss zu finden und so lässt er sich auf eine lebensgefährliche Mutprobe ein. Gemäß dem Motto „alles oder nichts“.</p>
@@ -120,7 +119,7 @@
         <small class="text-muted">Drama - FSK16 - 1 Std. 48 Min.</small>
       </div>
     </div>
-    <div class="card" style="margin-right: 100px; text-align: center;">
+    <div class="card" style="margin-right: 100px; margin-bottom: 25px; text-align: center; min-width: 300px; max-width: 300px;">
       <img class="card-img-top" src="assets/img/Filme/beste_freunde_f.jpg" alt="Card image cap">
       <div class="card-body">
         <p class="card-text">Benny ist ein Hund zugelaufen. Obwohl er bisher wenig mit Tieren anfangen konnte, merkt er schnell, dass Bello ein ganz besonderer Hund ist...</p>
@@ -130,7 +129,7 @@
         <small class="text-muted">Komödie - FSK 6 - 1 Std. 56 Min.</small>
       </div>
     </div>
-    <div class="card" style="text-align: center;">
+    <div class="card" style="text-align: center; margin-right: 100px; margin-bottom: 25px; min-width: 300px; max-width: 300px;">
       <img class="card-img-top" src="assets/img/Filme/fight_f.jpg" alt="Card image cap">
       <div class="card-body">
         <p class="card-text">Mike hat einen Traum: Er will unbedingt Basketballprofi werden. Damit er diesem Traum näherkommt, wechselt er in ein Internat. Zu Beginn hat er einige Startschwierigkeiten. Findet er zurück zu alter Stärke?</p>
